--- a/src/locales/de/common.json
+++ b/src/locales/de/common.json
@@ -7,8 +7,8 @@
     "contact": "Kontakt"
   },
   "hero": {
-    "greeting": "Hallo, ich bin Jairo Alexandro",
-    "name": "Jairo Alexandro",
+    "greeting": "Hallo, ich bin J. Alexandro",
+    "name": "J. Alexandro",
     "title": "Full Stack Entwickler",
     "description": "Leidenschaftlicher Entwickler, der außergewöhnliche Web-Erlebnisse und innovative Lösungen schafft.",
     "cta": "Meine Projekte ansehen",
