--- a/src/locales/es/common.json
+++ b/src/locales/es/common.json
@@ -7,8 +7,8 @@
     "contact": "Contacto"
   },
   "hero": {
-    "greeting": "Hola, soy Jairo Alexandro",
-    "name": "Jairo Alexandro",
+    "greeting": "Hola, soy J. Alexandro",
+    "name": "J. Alexandro",
     "title": "Full Stack Developer",
     "description": "Desarrollador apasionado por crear experiencias web excepcionales y soluciones innovadoras.",
     "cta": "Ver mis proyectos",
