--- a/src/locales/fr/common.json
+++ b/src/locales/fr/common.json
@@ -7,8 +7,8 @@
     "contact": "Contact"
   },
   "hero": {
-    "greeting": "Salut, je suis Jairo Alexandro",
-    "name": "Jairo Alexandro",
+    "greeting": "Salut, je suis J. Alexandro",
+    "name": "J. Alexandro",
     "title": "Développeur Full Stack",
     "description": "Développeur passionné créant des expériences web exceptionnelles et des solutions innovantes.",
     "cta": "Voir mes projets",
