--- a/src/locales/it/common.json
+++ b/src/locales/it/common.json
@@ -7,8 +7,8 @@
     "contact": "Contatto"
   },
   "hero": {
-    "greeting": "Ciao, sono Jairo Alexandro",
-    "name": "Jairo Alexandro",
+    "greeting": "Ciao, sono J. Alexandro",
+    "name": "J. Alexandro",
     "title": "Sviluppatore Full Stack",
     "description": "Sviluppatore appassionato che crea esperienze web eccezionali e soluzioni innovative.",
     "cta": "Vedi i miei progetti",
