--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -7,8 +7,8 @@
     "contact": "Contact"
   },
   "hero": {
-    "greeting": "Hi, I'm Jairo Alexandro",
-    "name": "Jairo Alexandro",
+    "greeting": "Hi, I'm J. Alexandro",
+    "name": "J. Alexandro",
     "title": "Full Stack Developer",
     "description": "Passionate developer creating exceptional web experiences and innovative solutions.",
     "cta": "View my projects",
